apps/habit/habit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: habit-deployment
  namespace: habit
  labels:
    app: habit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: habit
  template:
    metadata:
      labels:
        app: habit
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: habit
        image: ghcr.io/florianbesson/habit-tracker-app:v5
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: habit-data
            mountPath: /data
      volumes:
        - name: habit-data
          persistentVolumeClaim:
            claimName: habit-data
