apps/habit/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: habit-service
  namespace: habit
spec:
  type: ClusterIP
  selector:
    app: habit
  ports:
  - port: 7777 
    targetPort: 3000
